--- a/My Code/Unit - 07/index.html
+++ b/My Code/Unit - 07/index.html
@@ -1,36 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Dice Game</title>
-  </head>
-  <body>
-    <main>
-      <section class="player player--0 player--active">
-        <h2 class="name" id="name--0">Player 1</h2>
-        <p class="score" id="score--0">0</p>
-        <div class="current">
-          <p class="current-label">Current</p>
-          <p class="current-score" id="current--0">0</p>
-        </div>
-      </section>
-      <section class="player player--1">
-        <h2 class="name" id="name--1">Player 2</h2>
-        <p class="score" id="score--1">0</p>
-        <div class="current">
-          <p class="current-label">Current</p>
-          <p class="current-score" id="current--1">0</p>
-        </div>
-      </section>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="style.css" />
+  <title>Dice Game</title>
+</head>
+<body>
+<div class="mode-select">
+  <h1 class="tittle">Dice Game</h1>
+  <h1 class="select">Select Game Mode</h1>
+  <button class="btns btn1" data-mode="local">👥 2 Players (Same Device)</button>
+  <button class="btns btn2" data-mode="cpu">🤖 Single Player (vs CPU)</button>
+  <button class="btns btn3" data-mode="online">🌐 Online Multiplayer</button>
+</div>
+<main>
+  <section class="player player--0 player--active">
+    <h2 class="name" id="name--0">Player 1</h2>
+    <p class="score" id="score--0">0</p>
+    <div class="current">
+      <p class="current-label">Current</p>
+      <p class="current-score" id="current--0">0</p>
+    </div>
+  </section>
+  <section class="player player--1">
+    <h2 class="name" id="name--1">Player 2</h2>
+    <p class="score" id="score--1">0</p>
+    <div class="current">
+      <p class="current-label">Current</p>
+      <p class="current-score" id="current--1">0</p>
+    </div>
+  </section>
 
-      <img src="dice-5.png" alt="Playing dice" class="dice" />
-      <button class="btn btn--new">🔄 New game</button>
-      <button class="btn btn--roll">🎲 Roll dice</button>
-      <button class="btn btn--hold">📥 Hold</button>
-    </main>
-    <script src="script.js"></script>
-  </body>
+  <img src="dice-5.png" alt="Playing dice" class="dice" />
+  <button class="btn btn--new">🔄 New game</button>
+  <button class="btn btn--roll">🎲 Roll dice</button>
+  <button class="btn btn--hold">📥 Hold</button>
+</main>
+<div class="modal hidden" id="onlineModal">
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <h1 class="online">Online Multiplayer</h1>
+    <div id="roomForm">
+      <input type="text" id="roomId" placeholder="Room ID">
+      <input type="password" id="roomPassword" placeholder="Password">
+      <button class="loginBtn" id="createRoomBtn">Create Room</button>
+      <button class="loginBtn" id="joinRoomBtn">Join Room</button>
+    </div>
+    <div id="waitingRoom" class="hidden">
+      <h3>Room: <span id="currentRoomId"></span></h3>
+      <div class="player-status-container">
+        <div class="player-status">Player 1: <span id="player1-status" class="online-status offline">○ Offline</span></div>
+        <div class="player-status">Player 2: <span id="player2-status" class="online-status offline">○ Offline</span></div>
+      </div>
+      <p>Waiting for opponent...</p>
+    </div>
+  </div>
+</div>
+<script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-database-compat.js"></script>
+<script src="script.js"></script>
+</body>
 </html>
